--- a/index_2.html
+++ b/index_2.html
@@ -14,16 +14,16 @@
     src="https://upload.wikimedia.org/wikipedia/en/c/c3/Flag_of_France.svg" width="500"
 />
 
-<p>Here is a short paragraph about me. I'm currently doing the coding bootcamp at University of Utah.</p>
+<p>I'm currently doing the coding bootcamp through the University of Utah. This is proving to be challenging, yet rewarding.</p>
 <br>
 
 <br>
 
-<b></u><a href="https://en.wikipedia.org/wiki/Pony" target=_blank> Coming Soon</a></b>
+<b></u><a href="https://en.wikipedia.org/wiki/Pony" target=_blank> Link to a Pony</a></b>
 
 <br>
 
-<a href="#">Placeholder Link</a>
+<a href="#">Coming Soon</a>
 
 </body>
 
