--- a/index_2.html
+++ b/index_2.html
@@ -17,13 +17,14 @@
 <p>I'm currently doing the coding bootcamp through the University of Utah. This is proving to be challenging, yet rewarding.</p>
 <br>
 
+<h2>Contact Info</h2>
+
+<ul><li>Email:<a href= "emartizzle2185@me.com">emartizzle2185@me.com</a></li></ul>
+<ul><li>Github:<a href="https://github.com/E-Martinez77">E-Martinez77</a></li></ul>
+<ul><li>Portfolio:<a href="#">Coming Soon</a></li></ul>
+
 <br>
 
-<b></u><a href="https://en.wikipedia.org/wiki/Pony" target=_blank> Link to a Pony</a></b>
-
-<br>
-
-<a href="#">Coming Soon</a>
 
 </body>
 
